[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kagp"
version = "0.0.1"
dynamic = ["dependencies"]

[project.scripts]
kagp = "kagp.main_script:kagp_cmd"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["kagp"]